<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <GVL Name="GVL" Id="{666e43bf-616e-4fc1-9112-d6791a615660}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	emergencyStopButton				: NormallyClosedPushButton;
	stopButton						: NormallyClosedPushButton;
	startButton						: NormallyOpenPushButton;
	
	productDetectedSensor			: NormallyClosedSensor;
	conveyorFullSensor				: NormallyClosedSensor;

	conveyorMotor					: DirectOnlineStarterMotor;
	
	sortingConveyor					: SortingConveyor(
										productDetected		:= productDetectedSensor,
										conveyorFull		:= conveyorFullSensor,
										conveyor			:= conveyorMotor);
	
	myConveyorSortingMachine		: ConveyorSortingMachine(
										emergencyStopButton	:= emergencyStopButton,
										stopButton			:= stopButton,
										startButton			:= startButton,	
										conveyorModule		:= sortingCOnveyor);
	
	
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>